# misc

./: .gitignore
apue/: 1.3.c  daemonize.c  list  sig_usr.c
c/: 1.5.4.c  1.7.c  1.9.c  2.7.1.c  2.7.c  2.8.1.c  3.1.c  3.5.c  4.1.c  4.10.c  4.2.1.c  4.2.c  4.3.c  5.10.c  5.7.1.c  5.7.c  5.8.1.c  5.8.c  7.2.1.c  7.2.2.c  7.5.c  7.8.4.c  8.3.c  a.out  anonpages.c  bitfield_endian.c  getline.c  mt1.c  mt2.c  mt3.c  mt4.c  mt5.c  mt6.c  mt7.c  mt8.c  output.txt  t1-12.c  t1.13.c  t1.14.c  t1.17.c  (+28 more)
c_test/: a.out  arg.c  assert.c  binary-test  binary-test.c  char2hex.c  check_hdr.c  cli.c  const.c  copy  copy_file.c  debug_macro.c  debug_macro.h  delete  delete_file.c  double_asterisk.c  end.c  eof.c  exist.c  getdtablesize.c  hex2int.c  hex_to_string.c  identifier.c  int2bin.c  io_redirection.c  mmap.c  multi_hash.c  notepad  rename.c  semicolon.c  signed.c  stick  stick.c  string_int.c  strncmp  strncmp.c  struct.c  tag_test.c  test.db  tgmath.c  (+1 more)
cbssvc/: example-preset.json  example-zone.json  test.sh  webservice.py
cgi/: chunked.sh
data_struct/: 1.8.c  a.out
dtrace/: activity.d  countcalls.d  countprogs.d  countsyscalls.d  cswpercpu.d  daterun.d  displayerrno.d  errno.d  exclude.d  execcalls.d  fdscount.d  fsact  hello.d  progtime.d  readtrace.d  sig.d  specopen.d  syscalls.d  target.d  tick.d  whoexec.d
gdb/: ddd.c  fibonacci.c  ins.c  locals.c  org.c  until.c
gettext/: Makefile  fool.c
gettext/fool/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
gettext/fool/po/: Makevars  POTFILES.in  fool.pot  zh_CN.gmo  zh_CN.po
gettext/fool/src/: Makefile.am  Makefile.in  fool.c  gettext.h
go/: README.md  env  gomod.md  setenv.sh  tgpl.md
gsqlite/: cscope.proj
gtk/: thread_test.c
html/: color.html  example.html  form.html  list.html  table.html
ics/: Makefile  show_bytes.c
id3e/: Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.in
id3e/id3e/: Makefile  callback.c  callback.h  enc.c  enc.h  genre.c  genre.h  gv1.c  gv1.h  gva.c  gva.h  id3.c  id3.h  id3e.c  id3e.glade  id3e.h  id3v1.c  id3v1.h  list.c  main.c  wrap.c  wrap.h
id3e/source/: Makefile  Makefile.am  Makefile.in  callback.c  enc.c  enc.c.zzz  enc.h  genre.h  gv1.c  gva.c  id3.c  id3.h  id3e.c  id3e.glade  id3e.h  id3e.sh  id3v1.c  id3v1.h  list.c  list.h  wrap.c
idve_thread/: Readme
ipc/: 1p1c.c  Makefile  Readme  fifo_cli.c  fifo_serv.c  mqctl.c  mqselect.c  mqthread  mqthread.c  multibuff.c  npnc.c  pipe.c  pipe2.c  producer_consumer.c  rwlock.c  semctl.c  shmctl.c  signalrt.c  spooler.c  util.c  util.h
librio/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac  librio.doxygen
librio/src/: Makefile.am  Makefile.in  librio.c  librio.h
libwp/: Makefile.in  configure  configure.in
libwp/src/: Makefile.am  Makefile.in  config.h.in  libwpbase.h  libwppthread.c  libwpsocket.c  libwpstdc.h  libwpunix.c  libwpunix.h  libwpunix_rio.c  libwpunix_rio.h  libwpunix_utils.c  libwpunix_utils.h
lua/: README.md  array.lua  closure.lua  gvars.lua  ifelse.lua  loop.lua  meta.lua  module.lua  multi_return.lua  mymod.lua  oo.lua  recurse.lua  table.lua
m4/: sample.m4
network/: Makefile  udpclient.c  udpecho.c
proxy/: proxy.c
python/: ADD_ABBR.txt  assignment.py  box.py  class.py  db.py  decorator.py  define.txt  dice.py  dict.py  dict_copy.py  dictionary.py  equal_is.py  fib.py  food_query.py  fooddb.py  format.py  format3.py  func_name.py  hashing.py  itera.py  join_split.py  join_split3.py  list.py  list2.py  lookup.py  (+16 more)
(+1766 files in other folders)
