AM_CFLAGS = -Wall

lib_LTLIBRARIES = libwpbase.la libwpstdc.la libwppthread.la libwpunix.la libwpsocket.la
libwpbase_la_SOURCES = libwpbase.c libwpbase.h
libwpstdc_la_SOURCES = libwpstdc.c libwpstdc.h libwpbase.h
libwppthread_la_SOURCES = libwppthread.c libwppthread.h libwpbase.h
libwpunix_la_SOURCES = libwpunix.c libwpunix.h libwpbase.h libwpunix_utils.c libwpunix_utils.h
libwpsocket_la_SOURCES = libwpsocket.c libwpsocket.h libwpbase.h
